# 02-listas-salvadiaz

./: CMakeLists.txt  README.md
05_CircList/: CircList.h
Lista/: .Lista.h.kate-swp  Lista.h  Lista.h~  Nodo.h
test/: CMakeLists.txt
test/01_Invierte/: CMakeLists.txt  test.cpp
test/02_Insertar/: CMakeLists.txt  test.cpp
test/03_Eliminar/: CMakeLists.txt  test.cpp
test/04_Union/: CMakeLists.txt  test.cpp
test/05_CircList/: CMakeLists.txt  test.cpp
test/06_insertAfter/: CMakeLists.txt  test.cpp
test/Lista/: .test.cpp.kate-swp  CMakeLists.txt  test.cpp
